# kp2pml30.github.io

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Gemfile  LICENSE.md  README.md  _config.yml  flake.nix  gen.rb  index.html  index.md  npm-build-hook.sh  npm-install-hook.sh  package-lock.json  package.json  release.nix  ruff.toml  vite.config.ts
.claude/skills/jp-reference/: SKILL.md
.git-third-party/: config.json
.github/: disabled.yml
.github/workflows/: redirect.yml
_drafts/: 2023-12-01-designing-meta-assembly.md
_includes/: footer.html  head.html  header.html
_layouts/: default.html  home.html  post.html
_plugins/: pseudots.rb  wrap-headers.rb
_posts/: 2023-11-28-generics-implementations.md  2023-11-29-compiler-backends-issue.md  2023-11-30-any-methods.md  2023-12-01-designing-meta-assembly.md  2024-01-15-problem-with-online-games.md
_sass/: _dark.scss  base.scss
assets/project-f/: main.js
backend/: Cargo.nix  Cargo.toml  release.nix
backend/src/: altcha.rs  bot.rs  cancellation.rs  chatbox.rs  main.rs
categories/: about.md  categories.md  recommended.md
frontend/: .prettierrc.json  astro.config.mjs  package-lock.json  package.json  release.nix
frontend/nix/: npm-build-hook.sh  npm-install-hook.sh
frontend/public/: feed.xml  robots.txt
frontend/src/: main.ts  tree.json  types.ts  vue-app-entrypoint.ts
generator/: Gemfile  main.py  main.rb
generator/src/: blog.rb
nix/prettier/: package-lock.json  package.json
src/: App.vue  main.ts  tree.json  types.ts
src/assets/: base.css  code.css  main.css
(+116 files in other folders)
